<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.wxd.mmo</groupId>
    <artifactId>org.wxd.mmo</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>org.wxd.mmo.core</module>
        <module>org.wxd.mmo.gamesr</module>
        <module>org.wxd.mmo.gamesr-script</module>
        <module>org.wxd.mmo.loginsr</module>
        <module>org.wxd.mmo.loginsr-script</module>
        <module>org.wxd.mmo.message</module>
        <module>org.wxd.mmo.robotsr</module>
        <module>org.wxd.mmo.robotsr-script</module>
        <module>org.wxd.mmo.web</module>
        <module>org.wxd.mmo.web-script</module>
        <module>org.wxd.boot.reactor</module>
        <module>org.wxd.httpservice</module>
    </modules>

    <properties>
        <encoding>UTF-8</encoding>
        <java.version>21</java.version>
        <wxd.version>wxd-j21-01</wxd.version>
        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
        <maven.compiler.encoding>${encoding}</maven.compiler.encoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>public</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>public</id>
            <name>public</name>
            <url>https://repo1.maven.org/maven2/</url>
        </pluginRepository>
        <pluginRepository>
            <id>central</id>
            <name>central</name>
            <url>https://repo1.maven.org/maven2/</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>org.wxd</groupId>
            <artifactId>org.wxd.boot</artifactId>
            <version>${wxd.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wxd</groupId>
            <artifactId>org.wxd.boot.agent</artifactId>
            <version>${wxd.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wxd</groupId>
            <artifactId>org.wxd.boot.batis.sql.mysql</artifactId>
            <version>${wxd.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wxd</groupId>
            <artifactId>org.wxd.boot.http</artifactId>
            <version>${wxd.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wxd</groupId>
            <artifactId>org.wxd.boot.net</artifactId>
            <version>${wxd.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wxd</groupId>
            <artifactId>org.wxd.boot.starter</artifactId>
            <version>${wxd.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!--            <plugin>-->
            <!--                <groupId>io.protostuff</groupId>-->
            <!--                <artifactId>protostuff-maven-plugin</artifactId>-->
            <!--                <version>3.1.40</version>-->
            <!--            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <skip>true</skip>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>
            <plugin>
                <!-- 指定 JDK 版本 -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>copy</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>
                                ${project.build.directory}/lib
                            </outputDirectory>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target name="usage">
                                <echo message="拷贝资源文件"/>

                                <!--                                <copy tofile="${project.build.directory}/run/agent.jar" overwrite="true">-->
                                <!--                                    <fileset dir="${project.build.directory}/lib/" erroronmissingdir="false">-->
                                <!--                                        <include name="org.wxd.agent*.jar"/>-->
                                <!--                                    </fileset>-->
                                <!--                                </copy>-->

                                <!--                                <copy todir="${project.build.directory}/run/config" overwrite="true">-->
                                <!--                                    <fileset dir="${project.basedir}/config" erroronmissingdir="false">-->
                                <!--                                    </fileset>-->
                                <!--                                </copy>-->

                                <!--                                <copy todir="${project.build.directory}/run/cross_config" overwrite="true">-->
                                <!--                                    <fileset dir="${project.basedir}/cross_config" erroronmissingdir="false">-->
                                <!--                                    </fileset>-->
                                <!--                                </copy>-->

                                <!--                                <copy todir="${project.build.directory}/run" overwrite="true">-->
                                <!--                                    <fileset dir="${project.basedir}/sh" erroronmissingdir="false">-->
                                <!--                                    </fileset>-->
                                <!--                                </copy>-->

                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>